Archive2/c2/310429d63019f6/output
main.cpp:8:12: error: use 'template' keyword to treat 'foo' as a dependent template name
        T::foo<int>();
           ^
           template 
1 error generated.
